# sfmlPlatformer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Collision.cpp  Collision.hpp  DEFINITIONS.hpp  Game.cpp  Game.hpp  Makefile  Platform.cpp  Platform.hpp  Player.cpp  Player.hpp  README.md  main.cpp
include/: Collision.hpp  DEFINITIONS.hpp  Enemy.hpp  Game.hpp  Platform.hpp  Player.hpp
lib/: Collision.hpp  DEFINITIONS.hpp  Game.hpp  Platform.hpp  Player.hpp
src/: Collision.cpp  Enemy.cpp  Game.cpp  Platform.cpp  Player.cpp  main.cpp
